<resources>
    <string name="app_name">Soundful List</string>
    <string name="welcome_user">Welcome User!</string>
    <string name="welcome">Welcome</string>
    <string name="defaultUser">User</string>
    <string name="ExtraInfo">"          To use the soundful list app, please add elements to your list, and you can use my help to tell you what you want to get red out loud for you.         You can hush me with the proximity sensor.         To order the list by name, shake your phone once. To sort it by price, shake it again. To reorder it by time, shake it again.         I can read out for you one list element at a time, if you click them in the list.         You can delete a simple element by swiping it out from the list.         Use the buttons to change user, add items to the list, clear the list and reorder the list.     "</string>
    <string name="item_name_text">The items name is </string>
    <string name="item_price_text"> and it costs </string>
    <string name="item_price_unit">€</string>
    <string name="no_users">No users yet.</string>
    <string name="state_pre">The lists elements now sorted </string>
    <string name="tts_time">by time</string>
    <string name="tts_name">by name</string>
    <string name="tts_price">by price</string>
    <string name="tts_quiet">Okay, I will be quiet.</string>
    <string name="empty_userName">The name cannot be empty!</string>
    <string name="empty_itemName">The name cannot be empty!</string>
    <string name="empty_itemPrice">The price cannot be empty!</string>
    <string name="log_in_help_string">Log in with your or a list\'s name below:</string>
    <string name="log_in_name">Name:</string>
    <string name="log_in_username_hint">Your name</string>
    <string name="login_button_text">Login</string>
    <string name="existing_users_text">Existing Users:</string>
    <string name="clear_user_button_text">Clear</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="itemName_hint_text">The item\'s name</string>
    <string name="add_item_button_text">Add</string>
    <string name="item_data_text">The item\'s data:</string>
    <string name="item_name_text_Activity">Name:</string>
    <string name="item_price_hint">The item\'s price</string>
    <string name="item_price_text_Activity">Price:</string>
    <string name="title_text_help">Soundfull List</string>
    <string name="change_user_button_text">Change User</string>
    <string name="add_button_main_text">Add</string>
    <string name="sort_button_main_text">Sort</string>
    <string name="clear_button_main_text">Clear</string>
    <string name="itemlayout_name_text">Name:</string>
    <string name="itemlayout_name_data">itemName</string>
    <string name="itemlayout_price_text">itemPrice</string>
    <string name="itemlayout_price_data">Price:</string>
</resources>
